# libCZI

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
Src/: CMakeLists.txt  Doxyfile
Src/CZICmd/: CMakeLists.txt  cmdlineoptions.cpp
Src/JxrDecode/: CMakeLists.txt
Src/JxrDecode/Jxr/: JXRMeta.c  segdec.c  strcodec.c
Src/Test/scripts/: linux_runtests.sh  testdata_linux.txt  testdata_win.txt  win_runtests.cmd
Src/UnitTest/: inc_libCZI.h
Src/cmake/: ExternalEIGEN3.cmake
Src/libCZI/: BitmapOperations.cpp  BitmapOperations.h  CMakeLists.txt  CZIReader.cpp  CreateBitmap.cpp  CziAttachmentsDirectory.cpp  CziMetadataBuilder.cpp  CziMetadataBuilder.h  CziMetadataDocumentInfo.cpp  CziMetadataDocumentInfo.h  CziMetadataDocumentInfo2.cpp  CziMetadataDocumentInfo2.h  CziMetadataSegment.cpp  CziParse.cpp  CziParse.h  CziStructs.cpp  CziSubBlockDirectory.cpp  CziSubBlockDirectory.h  CziUtils.cpp  CziUtils.h  DimCoordinate.cpp  ParseQueryString.cpp  ParseQueryString.h  Query.cpp  decoder_wic.cpp  inc_libCZI_Config.h  libCZI.h  libCZI_Config.h.in  libCZI_Helpers.h  libCZI_Lib.cpp  libCZI_Metadata.h  libCZI_Metadata2.h  libCZI_Pixels.h  libCZI_Query.h  libCZI_Site.h  libCZI_Utilities.cpp  libCZI_Utilities.h  libCZI_exceptions.h  stdAllocator.cpp  utilities.cpp  (+1 more)
Src/libCZI/Doc/: CZICmd_usage.markdown  third_party_software.markdown  using_libCZI.markdown
Src/libCZI_UnitTests/: CMakeLists.txt  MockMetadataSegment.cpp  MockMetadataSegment.h  main.cpp  pch.h  testImage.h  test_DisplaySettings.cpp  test_IndexSet.cpp  test_JxrDecode.cpp  test_LUT.cpp  test_ParseQuery.cpp  test_Utilities.cpp  test_bitmapOperations.cpp  test_metadatareading.cpp  test_multichannelcomposite.cpp  test_reader.cpp  utils.h
